added background and sizing

--- a/index.html
+++ b/index.html
@@ -4409,11 +4409,11 @@
                }
             
 
-            let diameter = 3000;
+            let diameter = 2000;
 
             let margin = { top: 220, right: 120, bottom: 220, left: 120 },
-                width = diameter,
-                height = diameter;
+                width = diameter-425,
+                height = diameter-425;
 
             let i = 0,
                 duration = 250,
