fixing circle rotating

--- a/index.html
+++ b/index.html
@@ -4481,7 +4481,7 @@
             
 
                  function handleMouseOver(d, i) {  // Add interactivity
-                 
+                     console.log(d)
                 }
 
                 function handleMouseOut(d, i) {
