--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-   <link rel="shortcut icon" type="image/ico" href="favicon.ico" />
+   <link rel="shortcut icon" type="image/ico" href="http://3.bp.blogspot.com/-TESUU1biQB0/Tt5i_20x97I/AAAAAAAAA08/XIfwyX7ZpGE/s640/black_jordan_logo+-+Copy-12.JPG" />
    <link rel="stylesheet" type="text/css" href="dist/bundle.css">
    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.css">
    <link href="https://fonts.googleapis.com/css?family=Maven+Pro" rel="stylesheet">
    <link href="https://fonts.googleapis.com/css?family=Orbitron&display=swap" rel="stylesheet">
-   <title>NBA Snap SHOT</title>
+   <title>NBA Snap Shot</title>
    
    
 </head>
@@ -46,6 +46,7 @@
       <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/d3/3.3.10/d3.min.js"></script>
       <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
       <script src="https://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
+      
       <script>
          let allStars = [
                "LeBron James",
@@ -88,7 +89,7 @@
                return a;
             }
 
-            fetch('../data/nba.json')
+            fetch('data/nba.json')
                .then(res => res.json())
                .then(json => {
                   let diameter = window.innerWidth;
