--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-   <link rel="shortcut icon" type="image/ico" href="http://3.bp.blogspot.com/-TESUU1biQB0/Tt5i_20x97I/AAAAAAAAA08/XIfwyX7ZpGE/s640/black_jordan_logo+-+Copy-12.JPG" />
+   <link rel="shortcut icon" type="image/ico" href="favicon.ico" />
    <link rel="stylesheet" type="text/css" href="dist/bundle.css">
    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.css">
    <link href="https://fonts.googleapis.com/css?family=Maven+Pro" rel="stylesheet">
@@ -115,10 +115,7 @@
                   //
                   let twentyNineTeen = json;
 
-                  console.log("Before the tree");
                   //DISTANCE BETWEN CLUSTERS
-                  console.log(d3);
-                  console.log(d3.layout);
                   let tree = d3.layout.tree()
                      .size([360, (diameter / 2 - 80)])
                      .separation(function (a, b) { return (a.parent === b.parent ? 1.5 : 2.7) / a.depth; });
