basketballref scrape data pushed into nested dict

--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
                <span id="last-letter" class="letters">P</span>
                <span class="letters">S</span>
                <span class="letters">H</span>
-               <a href="https://github.com/aghlichl/NBA-Snap-Shot" target="_blank">
-               <span class="letters"></span><i id="icon-size" class="fab fa-github fa-3x letters"></i></span>
+               <span class="letters">
+                  <a href="https://github.com/aghlichl/NBA-Snap-Shot" target="_blank">
+                  <i id="icon-size" class="fab fa-github fa-1x letters"></i>
+               </span>
                </a>
                <span class="letters">T</span>
             </div>
