--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
    <head>
       <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta name="viewport" content="width=1024">
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
       <link rel="shortcut icon" type="image/ico" href="favicon.ico" />
       <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -12,7 +12,6 @@
       <title>NBA Snap Shot</title>
    </head>
    <body>
-
          <div class="rainbow-text">
             <div class="title-text">
                <span class="letters">N</span>
