--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
    <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=1024">
+      <meta name="viewport" content="height=1024">
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
       <link rel="shortcut icon" type="image/ico" href="favicon.ico" />
       <link rel="stylesheet" type="text/css" href="css/style.css">
