updated head elements for LinkedIn photo

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
       <link href="https://fonts.googleapis.com/css?family=Maven+Pro" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Orbitron&display=swap" rel="stylesheet">
       <title>NBA Snap Shot</title>
+      <meta name="description" content="NBA Snap Shot" />
+      <meta name="title" property="og:title" content="NBA D3.js" />
+      <meta property="og:type" content="_" />
+      <meta name="image" property="og:image" content="https://i.postimg.cc/5yQyhC5F/Screenshot-8.png" />
+      <meta name="description" property="og:description" content="_" /><meta name="author" content="_" />
    </head>
    <body>
          <div class="rainbow-text">
